# C-OpenGL-Test

./: .gitignore  CMakeLists.txt  build.bat  build.sh  debug.sh  test.sh
resources/shaders/: baseFragmentShader.frag  baseVertexShader.vert
src/: main.c
src/vulkanBackend/: CMakeLists.txt  gpuBuffers.c  gpuBuffers.h  timeWindows.c  timeWindows.h  vertex.c  vertex.h  vulkanBackend.c  vulkanBackend.h
src/vulkanBackend/CommandBuffers/: commandBuffers.c  commandBuffers.h
src/vulkanBackend/DepthStencil/: depthStencil.c  depthStencil.h
src/vulkanBackend/TextureImages/: textureImages.c  textureImages.h
src/vulkanBackend/TextureSampler/: textureSampler.c  textureSampler.h
